<resources>
    <string name="app_name">ReliabilityExaminator</string>
    <string name="action_settings">Settings</string>
    <string name="failed_measurement">Failed Measurment</string>
    <string name="failed_permissions">Failed Permissions</string>
    <string name="tango_error">"Tango Exception! Try again!"</string>
    <string name="no_uuid_tango_error">"No ADF with that UUID!"</string>
    <string name="no_adfs_tango_error">No ADF UUIDs</string>
    <string name="device_pitch">Device Pitch:</string>
    <string name="pitch_default_string">0°</string>
    <string name="adf_status">ADF Status:</string>
    <string name="no">No</string>
    <string name="adf_name">ADF Name:</string>
    <string name="empty_value">-</string>
    <string name="adf_id">ADF ID:</string>
    <string name="adf_id_default">0000000000000</string>
    <string name="last_adf_location">Last ADF Location:</string>
    <string name="last_time_default">-1 sec</string>
    <string name="adf_located">ADF located:</string>
    <string name="yes">Yes</string>
    <string name="distance">Distance:</string>
    <string name="adf_status_loaded">ADF loaded</string>
    <string name="adf_status_extending">extending ADF</string>
    <string name="adf_status_learning">learning new ADF</string>
    <string name="adf_status_located">located with ADF</string>
    <string name="adf_status_notlocated">Not located</string>
    <string name="adf_status_noadf">No ADF Loaded</string>
    <string name="adf_status_saving">Saving ADF ..</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_name_dialog_title">Set the ADF name</string>
    <string name="unload_adf">Unload ADF</string>
    <string name="restart">Restart</string>
    <string name="export_adf_list">Export ADF-List</string>
    <string name="import_adf">Import ADF</string>
    <string name="start_data_gathering">Start Data Gathering</string>
</resources>
