<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.inovex.fbuerkle.reliabilityexaminator.Activities.ExaminatorActivity">
    <item
        android:id="@+id/action_export_adf"
        android:title="Export ADF"/>
    <item
        android:id="@+id/action_load_adf"
        android:title="Load ADF"/>
    <item
        android:id="@+id/action_stop_protocol"
        android:title="Stop Protocol"/>
    <item
        android:id="@+id/action_start_arealearning"
        android:title="Start Area Learning"/>
    <item
        android:id="@+id/action_reset_adf"
        android:title="@string/unload_adf"/>
    <item
        android:id="@+id/action_restart"
        android:title="@string/restart"/>
    <item
        android:id="@+id/action_export_adf_list"
        android:title="@string/export_adf_list"/>
</menu>
