<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.inovex.fbuerkle.reliabilityexaminator.Activities.ExaminatorActivity"
    tools:showIn="@layout/activity_main">

    <android.opengl.GLSurfaceView
        android:id="@+id/top_preview"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="220dp"
        android:layout_width="391dp"/>

    <android.opengl.GLSurfaceView
        android:id="@+id/bottom_preview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/top_preview"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_height="220dp"
        android:layout_width="391dp"/>

    <TextView
        android:text="@string/device_pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pitch_label"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:text="@string/pitch_default_string"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pitch_value"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_adf_lastlocated_label"
        app:layout_constraintTop_toTopOf="@+id/tv_pitch_label"/>

    <TextView
        android:text="@string/adf_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_status_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_pitch_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pitch_label"/>

    <TextView
        android:text="@string/adf_status_noadf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_status_value"
        app:layout_constraintTop_toTopOf="@+id/tv_adf_status_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_pitch_value"/>

    <TextView
        android:id="@+id/tv_adf_name_label"
        android:text="@string/adf_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_status_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_adf_status_label"/>

    <TextView
        android:text="@string/empty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_name_value"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_status_value"
        app:layout_constraintTop_toTopOf="@+id/tv_adf_name_label"/>

    <TextView
        android:text="@string/adf_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_id_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_name_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_adf_name_value"/>

    <TextView
        android:text="@string/empty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_id_value"
        app:layout_constraintTop_toTopOf="@+id/tv_adf_id_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_name_value"/>

    <TextView
        android:text="@string/last_adf_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_lastlocated_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_adf_located_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_id_label"
        android:layout_marginTop="8dp"/>

    <TextView
        android:text="@string/last_time_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_lastlocated_value"
        app:layout_constraintTop_toTopOf="@+id/tv_adf_lastlocated_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_located_value"/>

    <TextView
        android:id="@+id/tv_adf_located_label"
        android:text="@string/adf_located"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_id_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_adf_id_label"/>

    <TextView
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_located_value"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_id_value"
        app:layout_constraintTop_toTopOf="@+id/tv_adf_located_label"/>

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_distance_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_adf_lastlocated_label"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_lastlocated_label"
        android:layout_marginTop="8dp"/>

    <TextView
        android:text="@string/empty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_distance_value"
        app:layout_constraintLeft_toLeftOf="@+id/tv_adf_lastlocated_value"
        app:layout_constraintTop_toTopOf="@+id/tv_distance_label"/>

    <TextView
        android:text="@string/empty_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_adf_located_time"
        app:layout_constraintTop_toTopOf="@+id/tv_adf_located_value"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_adf_located_value"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="214dp"
        tools:layout_editor_absoluteX="465dp"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
